49
================

11/06/24 Add ANIMALWARNING, PERSONWARNING, ORIGINALOWNERWARNING csv columns
11/06/24 Set owner from originalowner when importing non-shelter animals from csv
10/06/24 Add American Bully publisher breed for PetFinder
06/06/24 Add new animal: Pickup/datebroughtin not being hidden for non-shelter
05/06/24 Add animallocation.PrevAnimalLocationID to assist with reporting
05/06/24 Add {QRS} report token for embeddeding a QR code to the animalview page 
03/06/24 Only set microchipped flag for online forms if a microchip contains value
03/06/24 Add dateofbirthanimal/dateofbirthperson/dateofbirthperson2 online form fields
31/05/24 Add utils.csv_generator for exporting as chunked data
31/05/24 Publishing option to allow some breeds to be always sent as crossbreed/mix
30/05/24 Reload animal test tab after perform/give like vaccinations
30/05/24 Filter commas in content-disposition filenames (fixes Edge bug)
29/05/24 Add onlineform import field for healthproblems
27/05/24 Make sending new diary note updates an option with config as default #1298
26/05/24 Email person should use email rather than person templates
24/05/24 Fix bad regex escapes after updating to Python 3.12 on dev machines
23/05/24 Query builder: Treat additional field 0 as no value as well as empty string
23/05/24 Bulk change animals: create diary notes #1472
20/05/24 Option to choose married couple name format
14/05/24 Prevent invalid queries when there is no expired media
13/05/24 Online forms: Create animal should deduplicate if code is present in name
09/05/24 Add English (Turkey) locale
09/05/24 Fix bug with mailing label PDF and unicode chars in the filename
08/05/24 Only complete the incomplete diary notes on animal death, instead of all
07/05/24 Reports: cope with being given a negative number for rounding digits
07/05/24 ClinicTypeDescription field mispelled as ClinicTypeDescripton in new dbs
06/05/24 Query builder: animal queries can include test and vacc dates